Changelog for Games-Bowling-Scorecard

0.100    2007-01-21
         add roll_ok checks

0.011    2007-01-21
         fix version code/doc mismatches
         add score_through method
         add AsText to produce ASCII scorecards

0.001    2007-01-21
         first release!